--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-sm  fixed-top navbar-custom">
         <a href="index.html" class="navbar-brand ms-3">
-            <img src="images/logo.png" alt="">
+            <img src="fotor-20241024174712.png" alt="Logo Escolinha Chute Inicial">
         </a>
         
         <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,21 +48,17 @@
 
 <div class="container text-center pt-5">
     <div class="position-relative text-center mt-5">
-        <img src="images/image-principal-original.jpg" class="img-fluid custom-img sm" alt="Imagem de Futebol">
+        <img src="images-galeria/aluno3.jpeg" class="img-fluid custom-img" alt="Imagem de Futebol">
         <div class="align-content-center">
-            <h2 class="bem-vindo fs-lg-2">
-                <span class="fade-in-text">BEM VINDO A</span>
-                <span class="fade-in-text destaque-titulo">CHUTE INICIAL!</span>
-            </h2>
         </div>
     </div>
 
-    <a href="https://wa.me/5551999681200?text=Olá,%20vi%20seu%20número%20no%20site!" class="btn btn-lg mt-2 btn-acao">Saiba mais</a>
+    <a href="https://wa.me/5591999681200?text=Oi!%20Vi%20sobre%20a%20escolinha%20Chute%20Inicial%20e%20quero%20saber%20mais%20detalhes.%20Como%20posso%20inscrever%20meu%20filho(a)?" class="btn btn-lg mt-2 btn-acao">Saiba mais</a>
 
     <div class="bg-custom">
         <div>
             <h3 class="subtitulo">O começo da aventura no <span class="destaque-titulo">futebol</span></h3>
-            <p class="text-start fs-5 fs-md-3 fs-lg-3">"Nossa intenção é oferecer às crianças uma introdução divertida e educativa ao futebol. Acreditamos que o primeiro contato com o futebol deve ser uma experiência positiva para nossas crianças, promovendo o aprendizado das habilidades básicas e o amor pelo jogo desde cedo. Junte-se a nós e veja como seu filho pode começar sua jornada de uma maneira especial e estimulante!"</p>
+            <p class="text-start fs- fs-md-3 fs-lg-3 text-center">"Nossa intenção é oferecer às crianças uma introdução divertida e educativa ao futebol. Acreditamos que o primeiro contato com o futebol deve ser uma experiência positiva para nossas crianças, promovendo o aprendizado das habilidades básicas e o amor pelo jogo desde cedo. Junte-se a nós e veja como seu filho pode começar sua jornada de uma maneira especial e estimulante!"</p>
         </div>
         <div class="mt-3">
             <h4 class="subtitulo2">Confira nossos destaques</h4>
@@ -71,16 +67,24 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner w-auto">
                     <div class="carousel-item active">
-                        <img src="images/imageteste1.jpg" class="d-block w-100" alt="Imagem 1">
+                        <img src="images-galeria/aluno4.jpeg" class="d-block w-100" alt="Imagem 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/imageteste2.jpg" class="d-block w-100" alt="Imagem 2">
+                        <img src="images-galeria/professor2.jpeg" class="d-block w-100" alt="Imagem 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/imageteste2.jpg" class="d-block w-100" alt="Imagem 3">
+                        <img src="images-galeria/professor3.jpeg" class="d-block w-100" alt="Imagem 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images-galeria/aluno6.jpeg" class="d-block w-100" alt="Imagem 4">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images-galeria/aluno5.jpeg" class="d-block w-100" alt="Imagem 5">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -97,6 +101,11 @@
             <div class="card-body">
                 <h4 class="card-title subtitulo2">Horários das aulas:</h4>
                 <ul class="list-group list-group-flush text-start">
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="images/calendar-xmark-alt-svgrepo-com.svg" alt="Ícone Calendário" class="me-2" style="width: 20px; height: 20px;">
+                        <strong>Terça:</strong> 
+                        <span class="ms-2">18:00 - 19:00</span>
+                    </li>
                     <li class="list-group-item d-flex align-items-center">
                         <img src="images/calendar-xmark-alt-svgrepo-com.svg" alt="Ícone Calendário" class="me-2" style="width: 20px; height: 20px;">
                         <strong>Quinta:</strong> 
