--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-sm  fixed-top navbar-custom">
         <!--Logo-->
         <a href="index.html" class="navbar-brand ms-3">
-            <img src="images/logo.png" alt="">
+            <img src="fotor-20241024174712.png" alt="Logo Escolinha Chute Inicial">
         </a>
         
         <!--Hamburguer-->
